[gd_scene load_steps=15 format=2]

[ext_resource path="res://textures/entity/pig/pig.png" type="Texture" id=1]
[ext_resource path="res://shaders/entityBackLayer.tres" type="Material" id=2]
[ext_resource path="res://scripts/Pig.gd" type="Script" id=3]
[ext_resource path="res://scripts/hitbox.gd" type="Script" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 8, 0, 9, 8 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 17, 0, 8, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 9, 8, 4, 6 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 9, 8, 4, 6 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 13, 8, 4, 6 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 13, 8, 4, 6 )

[sub_resource type="Animation" id=7]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/path = NodePath("FRLeg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FRLeg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BRLeg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BRLeg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BLLeg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BLLeg:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("FLLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("FLLeg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Walk"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("FRLeg:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FRLeg:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 35.0, 0.0, -35.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("BRLeg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 7, 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("BRLeg:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -35.0, 0.0, 35.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BLLeg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 4 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BLLeg:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -35.0, 0.0, 35.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("FLLeg:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -5, 4 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("FLLeg:rotation_degrees")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 35.0, 0.0, -35.0 ]
}

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 7, 7 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 9, 7 )

[node name="Pig" type="KinematicBody2D"]
collision_layer = 8
script = ExtResource( 3 )

[node name="Head" type="Sprite" parent="."]
position = Vector2( -6.5, -2 )
texture = SubResource( 1 )
offset = Vector2( -4, 0 )

[node name="Body" type="Sprite" parent="."]
rotation = 1.5708
texture = SubResource( 2 )
flip_v = true

[node name="FLLeg" type="Sprite" parent="."]
position = Vector2( -5, 4 )
texture = SubResource( 3 )
offset = Vector2( 0, 3 )

[node name="FRLeg" type="Sprite" parent="."]
position = Vector2( 7, 4 )
texture = SubResource( 4 )
offset = Vector2( 0, 3 )

[node name="BLLeg" type="Sprite" parent="."]
material = ExtResource( 2 )
position = Vector2( -5, 4 )
z_index = -1
texture = SubResource( 5 )
offset = Vector2( 0, 3 )

[node name="BRLeg" type="Sprite" parent="."]
material = ExtResource( 2 )
position = Vector2( 7, 4 )
z_index = -1
texture = SubResource( 6 )
offset = Vector2( 0, 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Idle = SubResource( 7 )
anims/Walk = SubResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, 3 )
shape = SubResource( 9 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="hitbox" type="Area2D" parent="."]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -0.0200081, 2.90946 )
shape = SubResource( 10 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="mouse_entered" from="hitbox" to="." method="_on_hitbox_mouse_entered"]
[connection signal="mouse_exited" from="hitbox" to="." method="_on_hitbox_mouse_exited"]
